--- a/samsom store.html
+++ b/samsom store.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samsom Store</title>
 
-    <!-- Google Font -->
+    <!-- Google Font & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <style>
@@ -19,35 +18,28 @@
             color: #333;
             text-align: center;
             direction: rtl;
-            scroll-behavior: smooth;
-            overflow-x: hidden;
         }
 
         header {
             background-color: #f9e4dc;
-            padding: 10px 0;
+            padding: 15px 0;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
         header img {
-            width: 160px;
-            height: auto;
-            transition: transform 0.4s ease;
-        }
-
-        header img:hover {
-            transform: scale(1.08);
+            width: 120px;
+            border-radius: 50%;
         }
 
         .content {
             padding: 50px 20px;
-            animation: fadeIn 1.2s ease-in;
+            animation: fadeIn 1.2s ease-in-out;
         }
 
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(30px);
+                transform: translateY(20px);
             }
 
             to {
@@ -59,7 +51,6 @@
         .content h2 {
             color: #e48ca5;
             margin-bottom: 15px;
-            font-size: 1.8em;
         }
 
         .content p {
@@ -79,7 +70,6 @@
             border-radius: 25px;
             font-weight: bold;
             transition: 0.3s;
-            box-shadow: 0 3px 8px rgba(228, 140, 165, 0.3);
         }
 
         .btn:hover {
@@ -87,8 +77,63 @@
             transform: scale(1.05);
         }
 
+        .products {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 25px;
+            padding: 30px;
+            animation: fadeIn 1.5s ease-in-out;
+        }
+
+        .card {
+            background-color: #fff;
+            border-radius: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            transition: 0.3s;
+            padding-bottom: 15px;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .card img {
+            width: 100%;
+            height: 280px;
+            object-fit: cover;
+        }
+
+        .card h3 {
+            color: #e48ca5;
+            margin: 15px 0 5px;
+        }
+
+        .card p {
+            color: #444;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        .buy-btn {
+            display: inline-block;
+            background-color: #e48ca5;
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 20px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .buy-btn:hover {
+            background-color: #d0708f;
+            transform: scale(1.05);
+        }
+
         .social {
-            margin-top: 35px;
+            margin-top: 40px;
         }
 
         .social p {
@@ -99,7 +144,7 @@
 
         .social a {
             display: inline-block;
-            margin: 0 12px;
+            margin: 0 10px;
             text-decoration: none;
             color: #e48ca5;
             font-size: 28px;
@@ -111,23 +156,6 @@
             transform: scale(1.2);
         }
 
-        .contact-btn {
-            display: inline-block;
-            background-color: #25D366;
-            color: white;
-            text-decoration: none;
-            padding: 12px 25px;
-            border-radius: 25px;
-            font-weight: bold;
-            margin-top: 25px;
-            transition: 0.3s;
-        }
-
-        .contact-btn:hover {
-            background-color: #1da851;
-            transform: scale(1.05);
-        }
-
         footer {
             background-color: #f9e4dc;
             padding: 10px;
@@ -136,89 +164,18 @@
             margin-top: 40px;
         }
 
-        /* ======= PRODUCTS SECTION ======= */
-        #products {
-            background-color: #fff;
-            padding: 40px 20px;
-            animation: fadeUp 1.2s ease-in;
-        }
-
-        @keyframes fadeUp {
-            from {
-                opacity: 0;
-                transform: translateY(40px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        #products h2 {
-            color: #e48ca5;
-            margin-bottom: 25px;
-        }
-
-        .products-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 25px;
-            max-width: 1000px;
-            margin: auto;
-        }
-
-        .card {
-            background: #fff;
-            border-radius: 15px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            opacity: 0;
-            transform: translateY(30px);
-        }
-
-        .card.show {
-            opacity: 1;
-            transform: translateY(0);
-            transition: all 0.6s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
-        }
-
-        .card img {
-            width: 100%;
-            border-radius: 12px;
-            margin-bottom: 10px;
-        }
-
-        .card h3 {
-            color: #e48ca5;
-            margin-bottom: 5px;
-        }
-
-        .card p {
-            font-weight: bold;
-            color: #444;
-            margin-bottom: 10px;
-        }
-
         @media (max-width: 600px) {
+            header img {
+                width: 90px;
+            }
+
             .content {
-                padding: 30px 15px;
+                padding: 30px 10px;
             }
 
-            .btn,
-            .contact-btn {
-                padding: 10px 18px;
+            .btn {
+                padding: 10px 20px;
                 font-size: 0.9em;
-            }
-
-            .products-grid {
-                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -226,80 +183,51 @@
 
 <body>
 
-    <!-- Header -->
     <header>
         <img src="logo.jpg" alt="Samsom Store Logo">
     </header>
 
-    <!-- Main Section -->
     <div class="content">
         <h2>Welcome to Samsom Store</h2>
         <p>
-            Discover the latest winter collection with style and elegance 💕
-            Stay cozy and trendy with Samsom Store ✨
+            Discover the latest fashion trends in hoodies and jackets.
+            Explore our new winter collection and enjoy warmth with style ✨
         </p>
         <a href="#products" class="btn">Shop Now</a>
-
-        <div class="social">
-            <p>Follow us on:</p>
-            <a href="https://www.facebook.com/share/g/1AbJYtanLU/" target="_blank" title="Facebook">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://www.instagram.com/samsum_store1?igsh=MXhqZXlwNjhzcnR5dg==" target="_blank"
-                title="Instagram">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" title="WhatsApp">
-                <i class="fab fa-whatsapp"></i>
-            </a>
-
-            <div>
-                <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" class="contact-btn">
-                    <i class="fab fa-whatsapp"></i> Contact us on WhatsApp
-                </a>
-            </div>
-        </div>
     </div>
 
-    <!-- Products Section -->
-    <section id="products">
-        <h2>Our Products</h2>
-        <div class="products-grid">
+    <section id="products" class="products">
+        <div class="card">
+            <img src="hoodie.jpg" alt="Nike Hoodie">
+            <h3>Nike Hoodie</h3>
+            <p>Price: 390 EGP</p>
+            <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" class="buy-btn">Buy Now</a>
+        </div>
 
-            <div class="card">
-                <img src="hoodie.jpg" alt="Nike Hoodie">
-                <h3>Nike Hoodie</h3>
-                <p>Price: 390 EGP</p>
-            </div>
-
-            <div class="card">
-                <img src="jacket.jpg" alt="Tiger Jacket">
-                <h3>Tiger Jacket</h3>
-                <p>Price: 250 EGP</p>
-            </div>
-
+        <div class="card">
+            <img src="jacket.jpg" alt="Tiger Jacket">
+            <h3>Tiger Jacket</h3>
+            <p>Price: 250 EGP</p>
+            <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" class="buy-btn">Buy Now</a>
         </div>
     </section>
 
-    <!-- Footer -->
+    <div class="social">
+        <p>Follow us on:</p>
+        <a href="https://www.facebook.com/share/g/1AbJYtanLU/" target="_blank" title="Facebook">
+            <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/samsum_store1?igsh=MXhqZXlwNjhzcnR5dg==" target="_blank" title="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" title="WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+
     <footer>
         © 2025 Samsom Store — All rights reserved
     </footer>
-
-    <!-- Scroll Animation Script -->
-    <script>
-        const cards = document.querySelectorAll('.card');
-        const revealCards = () => {
-            cards.forEach(card => {
-                const cardTop = card.getBoundingClientRect().top;
-                if (cardTop < window.innerHeight - 100) {
-                    card.classList.add('show');
-                }
-            });
-        };
-        window.addEventListener('scroll', revealCards);
-        window.addEventListener('load', revealCards);
-    </script>
 
 </body>
 
