--- a/samsom store.html
+++ b/samsom store.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samsom Store</title>
 
-    <!-- Google Font & Icons -->
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <!-- مكتبة الأيقونات Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <style>
@@ -22,30 +21,18 @@
 
         header {
             background-color: #f9e4dc;
-            padding: 15px 0;
+            padding: 20px 0;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
-        header img {
-            width: 120px;
-            border-radius: 50%;
+        header h1 {
+            color: #e48ca5;
+            margin: 0;
+            font-size: 2.2em;
         }
 
         .content {
             padding: 50px 20px;
-            animation: fadeIn 1.2s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
         }
 
         .content h2 {
@@ -74,66 +61,10 @@
 
         .btn:hover {
             background-color: #d0708f;
-            transform: scale(1.05);
-        }
-
-        .products {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 25px;
-            padding: 30px;
-            animation: fadeIn 1.5s ease-in-out;
-        }
-
-        .card {
-            background-color: #fff;
-            border-radius: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            transition: 0.3s;
-            padding-bottom: 15px;
-        }
-
-        .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .card img {
-            width: 100%;
-            height: 280px;
-            object-fit: cover;
-        }
-
-        .card h3 {
-            color: #e48ca5;
-            margin: 15px 0 5px;
-        }
-
-        .card p {
-            color: #444;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        .buy-btn {
-            display: inline-block;
-            background-color: #e48ca5;
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            border-radius: 20px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-
-        .buy-btn:hover {
-            background-color: #d0708f;
-            transform: scale(1.05);
         }
 
         .social {
-            margin-top: 40px;
+            margin-top: 35px;
         }
 
         .social p {
@@ -144,7 +75,7 @@
 
         .social a {
             display: inline-block;
-            margin: 0 10px;
+            margin: 0 12px;
             text-decoration: none;
             color: #e48ca5;
             font-size: 28px;
@@ -156,6 +87,23 @@
             transform: scale(1.2);
         }
 
+        .contact-btn {
+            display: inline-block;
+            background-color: #25D366;
+            color: white;
+            text-decoration: none;
+            padding: 12px 25px;
+            border-radius: 25px;
+            font-weight: bold;
+            margin-top: 25px;
+            transition: 0.3s;
+        }
+
+        .contact-btn:hover {
+            background-color: #1da851;
+            transform: scale(1.05);
+        }
+
         footer {
             background-color: #f9e4dc;
             padding: 10px;
@@ -163,70 +111,48 @@
             font-size: 0.9em;
             margin-top: 40px;
         }
-
-        @media (max-width: 600px) {
-            header img {
-                width: 90px;
-            }
-
-            .content {
-                padding: 30px 10px;
-            }
-
-            .btn {
-                padding: 10px 20px;
-                font-size: 0.9em;
-            }
-        }
     </style>
 </head>
 
 <body>
 
     <header>
-        <img src="logo.jpg" alt="Samsom Store Logo">
+        <h1>Samsom Store</h1>
     </header>
 
     <div class="content">
-        <h2>Welcome to Samsom Store</h2>
+        <h2>Welcome to samsom store</h2>
         <p>
-            Discover the latest fashion trends in hoodies and jackets.
-            Explore our new winter collection and enjoy warmth with style ✨
+            بنقدّم أحدث صيحات الموضة في الملابس والكوتشيهات،
+            وحالياً بنعرض كوليكشن الشتاء الجديد ✨
+            اكتشفوا الجمال والدفا مع سامسوم ستور!
         </p>
-        <a href="#products" class="btn">Shop Now</a>
-    </div>
+        <a href="#" class="btn">تسوق الآن</a>
 
-    <section id="products" class="products">
-        <div class="card">
-            <img src="hoodie.jpg" alt="Nike Hoodie">
-            <h3>Nike Hoodie</h3>
-            <p>Price: 390 EGP</p>
-            <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" class="buy-btn">Buy Now</a>
+        <div class="social">
+            <p>تابعونا على:</p>
+            <a href="https://www.facebook.com/share/g/1AbJYtanLU/" target="_blank" title="فيسبوك">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/samsum_store1?igsh=MXhqZXlwNjhzcnR5dg==" target="_blank"
+                title="إنستجرام">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" title="واتساب">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+
+            <!-- زرار التواصل على واتساب -->
+            <div>
+                <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" class="contact-btn">
+                    <i class="fab fa-whatsapp"></i> تواصل معنا على واتساب
+                </a>
+            </div>
         </div>
-
-        <div class="card">
-            <img src="jacket.jpg" alt="Tiger Jacket">
-            <h3>Tiger Jacket</h3>
-            <p>Price: 250 EGP</p>
-            <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" class="buy-btn">Buy Now</a>
-        </div>
-    </section>
-
-    <div class="social">
-        <p>Follow us on:</p>
-        <a href="https://www.facebook.com/share/g/1AbJYtanLU/" target="_blank" title="Facebook">
-            <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/samsum_store1?igsh=MXhqZXlwNjhzcnR5dg==" target="_blank" title="Instagram">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://chat.whatsapp.com/FwpbaD4NsCsEOsdVbPQa4P" target="_blank" title="WhatsApp">
-            <i class="fab fa-whatsapp"></i>
-        </a>
     </div>
 
     <footer>
-        © 2025 Samsom Store — All rights reserved
+        © 2025 Samsom Store — جميع الحقوق محفوظة
     </footer>
 
 </body>
